@@ -12,6 +12,9 @@
 
 	<H3 _HD_OMIT_TOC>New Features</H3>
 
+	<li>HTMLDOC now features a CGI mode which provides PDF
+	conversion functionality for web servers.</li>
+
 	<li>HTMLDOC now generates a document outline for each
 	input file or URL in webpage mode; the outline shows the
 	title for the file and links to the first page
